add all chnges for new look

--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,14 @@
-.container{
-  position: relative;
+.container {
+  position:relative;
   overflow-x: hidden;
-  overflow-
-
+  overflow-y: hidden;
 }
-.header{
-  font-size:30px;
-  position: absolute;
+.head {
+  position:absolute;
+  top:100px;
+  left: 300px;
   text-align: center;
-  top: 200px;
-  left:250px;
-  color: white;
 }
-.form {
-  position: absolute;
-  top: 300px;
-
-}
- .form-group input  {
-  background-color: #3CBC8D;
-  color: white;
-  height:50px;
-  width:500px;
-
-}
- .form-group button {
-   height:50px;
-   width:100px;
-   padding:15px;
- }
+.head  h1 {
+    color:white;
+    font-size:60px;
